# OpenVR-WalkInPlace

./: .gitignore  CMakeLists.txt  Makefile  OpenVR-WalkInPlaceOverlay.pro  Readme.md  VRInputEmulator.sln  VRWalkInPlace.sln  build.sh  run.sh  run_64.sh
.github/: FUNDING.yml
build-client_overlay-Qt_5_7_0_for_Universal_Windows_Platform_64bit-Debug/: .qmake.winrt_uuid_OpenVR-InputEmulatorOverlay  Makefile  Makefile.Debug
build-client_overlay-Qt_5_7_0_for_Universal_Windows_Platform_64bit-Debug/debug/: Makefile.Debug
client_overlay/: CMakeLists.txt  client_overlay.pri  client_overlay.pro  client_overlay.qtvscr  client_overlay.vcxproj  client_overlay.vcxproj.filters  packages.config
client_overlay/Debug/: moc_DeviceManipulationTabController.cpp  moc_WalkInPlaceTabController.cpp  moc_overlaycontroller.cpp
client_overlay/Release/: moc_DeviceManipulationTabController.cpp  moc_WalkInPlaceTabController.cpp  moc_overlaycontroller.cpp
client_overlay/src/: GestureMatcher.cpp  GestureMatcher.h  LinearAnalyzer.cpp  LinearAnalyzer.h  MovementTracker.cpp  MovementTracker.h  TrainedModel.cpp  TrainedModel.h  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  overlaycontroller.cpp  overlaycontroller.h
client_overlay/src/tabcontrollers/: DeviceManipulationTabController.cpp  DeviceManipulationTabController.h  WalkInPlaceTabController.cpp  WalkInPlaceTabController.h
client_overlay/x64/Debug/client_overlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client_overlay.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client_overlay/x64/Release/: OpenVR-WalkInPlaceOverlay.exe.recipe
client_overlay/x64/Release/client_overlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client_overlay.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client_overlay/x64/Release/qt/: qtvars.xml
client_overlay/x64/Release/qt/qmake/: mocinclude.opt  props.txt  qml.qrc  qtvars.pro  qtvars.vcxproj  qtvars.vcxproj.filters  qtvars.xml
client_overlay_standalone/: client_overlay_standalone.vcxproj  client_overlay_standalone.vcxproj.filters
client_overlay_standalone/Release/: moc_WalkInPlaceTabController.cpp  moc_overlaycontroller.cpp
client_overlay_standalone/src/: overlaycontroller.h
client_overlay_standalone/src/tabcontrollers/: WalkInPlaceTabController.cpp  WalkInPlaceTabController.h
docs/screenshots/full_setup/: Readme.md
docs/screenshots/steamvr_bindings/: Readme.md
driver_vrinputemulator/src/: driver_deviceinfo.cpp  driver_server.cpp  driver_vrinputemulator.h
driver_vrinputemulator/src/com/shm/: driver_ipc_shm.cpp
driver_vrwalkinplace/: CMakeLists.txt  Makefile  driver.vrdrivermanifest  driver_vrwalkinplace.vcxproj  install_driver.sh
driver_vrwalkinplace/resources/input/: legacy_bindings_ovrwip_controller.json  ovrwip_controller_profile.json  vive_controller.json
driver_vrwalkinplace/resources/models/ovrwip_controller/: arrow.mtl  arrow.tga
driver_vrwalkinplace/resources/settings/: default.vrsettings
driver_vrwalkinplace/src/: dllmain.cpp  driver_deviceinfo.cpp  driver_server.cpp  driver_virtualdevices.cpp  driver_vrwalkinplace.cpp  driver_vrwalkinplace.h  logging.h  stdafx.cpp
driver_vrwalkinplace/src/com/shm/: driver_ipc_shm.cpp  driver_ipc_shm.h
driver_vrwalkinplace/src/devicemanipulation/: DeviceManipulationHandle.cpp  DeviceManipulationHandle.h
driver_vrwalkinplace/src/driver/: ServerDriver.cpp  ServerDriver.h  WatchdogProvider.cpp  WatchdogProvider.h
driver_vrwalkinplace/src/driver/utils/: DevicePropertyValueVisitor.h
driver_vrwalkinplace/src/hooks/: ITrackedDeviceServerDriver005Hooks.cpp  ITrackedDeviceServerDriver005Hooks.h  IVRDriverContextHooks.cpp  IVRDriverContextHooks.h  IVRDriverInput001Hooks.cpp  IVRDriverInput001Hooks.h  IVRProperties001Hooks.cpp  IVRProperties001Hooks.h  IVRServerDriverHost004Hooks.cpp  IVRServerDriverHost004Hooks.h  IVRServerDriverHost005Hooks.cpp  IVRServerDriverHost005Hooks.h  common.cpp  common.h
driver_vrwalkinplace/src/utils/: DevicePropertyValueVisitor.h
driver_vrwalkinplace/src/virtualdevice/: LeapController.cpp  LeapController.h  VirtualController.cpp  VirtualController.h
installer/: install.bat  install32.sh  install64.sh  installed_files.txt  installer.nsi  installer_standalone.nsi  listUninstallFiles.sh  uninstallFiles.list
lib_vrinputemulator/: lib_vrinputemulator.vcxproj
lib_vrinputemulator/include/: ipc_protocol.h  vrinputemulator.h
lib_vrinputemulator/src/: vrinputemulator.cpp
lib_vrwalkinplace/: CMakeLists.txt  Makefile  lib_vrwalkinplace.vcxproj
lib_vrwalkinplace/include/: config.h  ipc_protocol.h  logging.h  openvr_math.h  vrwalkinplace.h  vrwalkinplace_types.h
lib_vrwalkinplace/src/: vrwalkinplace.cpp
scripts/: send_button_event.bat
